# batch-llm

./: README.md  pyproject.toml
batchllm/batchllm/: batch_processor.py  config.py  example.py
batchllm/batchllm/processors/: base.py  openai_processor.py
