[tool.poetry]
name = "batch-llm"
version = "0.1.0"
description = ""
authors = ["Suriya Ganesh <suriyaganesh097@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^24.1.0"
tiktoken = "^0.8.0"
openai = "^1.54.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
